# geoserver-py

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  Makefile  README copy.md  README.md  TODOS.md  TO_REMOVE.ipynb  docker-compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: changelog.yml  docs.yml  linting.yml  pre-commit.yml  publish.yml  test.yml
api/geoserver/: geoserver.md  index.html
api/geowebcache/: geowebcache.md  index.html
changelog/: changelog.md  index.html
docs/: index.md
docs/plugins/: main.py
docs/theme/: announce.html
geoserver/: __init__.py  base.py  consts.py  exceptions.py  geoserver.py  geowebcache.py  utils.py
notebooks/: All In One.ipynb  Image Mosaic.ipynb  Layer Groups.ipynb  Layers.ipynb  Stores.ipynb  Styles.ipynb  Workspaces.ipynb
notebooks/About/: About.ipynb  index.html
notebooks/All In One/: index.html
notebooks/Fonts/: Fonts.ipynb  index.html
notebooks/Image Mosaic/: Image Mosaic.ipynb  index.html
notebooks/Layer Groups/: Layer Groups.ipynb  index.html
notebooks/Layers/: Layers.ipynb  index.html
notebooks/Security/: Security.ipynb  index.html
notebooks/Stores/: index.html
notebooks/Styles/: Styles.ipynb  index.html
notebooks/Workspaces/: Workspaces.ipynb  index.html
search/: search_index.json
tests/: conftest.py  helpers.py  image_mosaic.sh  test_examples.py  test_geoserver.py  test_geowebcache.py
tests/data/geojsons/: aoi.geojson  buildings.geojson  landuse.geojson
tests/data/rasters/: elevation.tif  raster.tif
tests/data/styles/: elevation.sld
tests/data/vectors/: buildings.dbf  buildings.shp  buildings.shx  landuse.dbf  landuse.shp  landuse.shx
theme/: main.html
theme/css/: style.css
